# gmm

./: .clang-format  CMakeLists.txt  README.md  compile  input.cpp
examples/: add_numbers.cpp  all_instructions.cpp  fibonacci.cpp
src/: main.cpp  util.cpp  util.h
src/lib/: compilation.cpp  compilation.h  matching.cpp  matching.h  processing.cpp  processing.h  util.cpp  util.h
